docs: :memo: add documentation for create Opening
