# handler/response.go
@@ -2,6 +2,7 @@ package handler
 
 import (
 	"fmt"
+	"gopportunities/schemas"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -21,4 +22,14 @@ func sendSuccess(c *gin.Context, op string, data interface{}) {
 		"message": fmt.Sprintf("Operation from handler: %s successfull", op),
 		"data":    data,
 	})
+}
+
+type ErrorResponse struct {
+	Message   string `json:"message"`
+	ErrorCode string `json:"errorCode"`
+}
+
+type CreateOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
 }
